--- a/package.json
+++ b/package.json
@@ -17,10 +17,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.2.0",
-    "file-loader": "^6.2.0",
     "gsap": "^3.7.1",
-    "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^5.3.2",
     "lazysizes": "^5.3.2",
     "loadsh": "0.0.4",
     "mini-css-extract-plugin": "^2.2.2",
@@ -28,7 +25,7 @@
     "portfinder-sync": "0.0.2",
     "postcss-loader": "^6.1.1",
     "pug": "^3.0.2",
-    "pug-loader": "^2.4.0",
+    "pug-plugin": "^5.3.0",
     "raw-loader": "^4.0.2",
     "rimraf": "^3.0.2",
     "sass": "^1.39.2",
